--- a/Src/Webmaster442.WindowsTerminal.csproj
+++ b/Src/Webmaster442.WindowsTerminal.csproj
@@ -9,7 +9,25 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>Webmaster442.WindowsTerminal</Title>
     <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS1591</WarningsAsErrors>
-    <IsAotCompatible>True</IsAotCompatible>
+    <Authors>webmaster442</Authors>
+    <Description>A windows terminal interaction libary</Description>
+    <PackageProjectUrl>https://github.com/webmaster442/WindowsTerminal</PackageProjectUrl>
+    <PackageIcon>128x128.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/webmaster442/WindowsTerminal</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>windows;terminal;fragment;extension;ANSI;Escape;Codes;Nerd;Fonts;DECPS</PackageTags>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Img\128x128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
