--- a/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
+++ b/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
@@ -25,15 +25,15 @@
 
 
     <ItemGroup>
-        <None Include="..\Img\128x128.png">
+        <None Include="..\..\Img\128x128.png">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
-        <None Include="..\LICENSE">
+        <None Include="..\..\LICENSE">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
-        <None Include="..\README.md">
+        <None Include="..\..\README.md">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
