--- a/Src/WindowsTerminal.Sixel.Drawing/Webmaster442.WindowsTerminal.Sixel.Drawing.csproj
+++ b/Src/WindowsTerminal.Sixel.Drawing/Webmaster442.WindowsTerminal.Sixel.Drawing.csproj
@@ -6,10 +6,10 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Title>Webmaster442.WindowsTerminal.Sixel.ImageSharp</Title>
+    <Title>Webmaster442.WindowsTerminal.Sixel.Drawing</Title>
     <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS1591</WarningsAsErrors>
     <Authors>webmaster442</Authors>
-    <Description>Webmaster442.WindowsTerminal extension for Sixel encoding images with ImageSharp</Description>
+    <Description>Webmaster442.WindowsTerminal extension for Sixel encoding images with System.Drawing</Description>
     <PackageProjectUrl>https://github.com/webmaster442/WindowsTerminal</PackageProjectUrl>
     <PackageIcon>128x128.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -35,9 +35,9 @@
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
-  
+
   <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
