--- a/Src/WindowsTerminal.Sixel/Webmaster442.WindowsTerminal.Sixel.csproj
+++ b/Src/WindowsTerminal.Sixel/Webmaster442.WindowsTerminal.Sixel.csproj
@@ -1,21 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsTrimmable>true</IsTrimmable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Title>Webmaster442.WindowsTerminal.Sixel.ImageSharp</Title>
+    <Title>Webmaster442.WindowsTerminal.Sixel</Title>
     <WarningsAsErrors>$(WarningsAsErrors);NU1605;CS1591</WarningsAsErrors>
     <Authors>webmaster442</Authors>
-    <Description>Webmaster442.WindowsTerminal extension for Sixel encoding images with ImageSharp</Description>
+    <Description>A windows terminal interaction libary, adds Sixel encoding</Description>
     <PackageProjectUrl>https://github.com/webmaster442/WindowsTerminal</PackageProjectUrl>
     <PackageIcon>128x128.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/webmaster442/WindowsTerminal</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>windows;terminal;ANSI;Escape;Codes;Sixel;SixLabors;ImageSharp</PackageTags>
+    <PackageTags>windows;terminal;sixel;image;display;terminal;console</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Version>2.0.0</Version>
@@ -38,10 +39,6 @@
   
   <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WindowsTerminal\Webmaster442.WindowsTerminal.csproj" />
   </ItemGroup>
 
 </Project>
