--- a/Src/WindowsTerminal.Sixel/Webmaster442.WindowsTerminal.Sixel.csproj
+++ b/Src/WindowsTerminal.Sixel/Webmaster442.WindowsTerminal.Sixel.csproj
@@ -21,7 +21,7 @@
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <Version>2.0.0</Version>
     <OutputPath>..\..\bin\$(Configuration)\</OutputPath>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,10 +33,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-    <None Update="README.md">
+    <Content Include="Readme.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
-    </None>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
