--- a/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
+++ b/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
@@ -24,6 +24,9 @@
     <OutputPath>..\..\bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Webmaster442.WindowsTerminal.Tests"/>
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\Img\128x128.png">
