--- a/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
+++ b/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
@@ -45,7 +45,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="9.0.2" Condition="'$(TargetFramework)' == 'net8.0'" />
+    <PackageReference Include="System.Text.Json" Version="9.0.*" Condition="'$(TargetFramework)' == 'net8.0'" />
   </ItemGroup>
 
 </Project>
