SkiaSharp image backend for sixel

--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Src\WindowsTerminal.ImageSharp\Webmaster442.WindowsTerminal.ImageSharp.csproj" />
+    <ProjectReference Include="..\Src\WindowsTerminal.SkiaSharp\Webmaster442.WindowsTerminal.SkiaSharp.csproj" />
     <ProjectReference Include="..\Src\WindowsTerminal\Webmaster442.WindowsTerminal.csproj" />
   </ItemGroup>
 
