--- a/Src/WindowsTerminal.SkiaSharp/Webmaster442.WindowsTerminal.SkiaSharp.csproj
+++ b/Src/WindowsTerminal.SkiaSharp/Webmaster442.WindowsTerminal.SkiaSharp.csproj
@@ -29,10 +29,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.*" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\..\Img\128x128.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -45,6 +41,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="3.119.*" />
   </ItemGroup>
 
 </Project>
