--- a/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
+++ b/Src/WindowsTerminal/Webmaster442.WindowsTerminal.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
@@ -19,7 +19,7 @@
     <PackageTags>windows;terminal;fragment;extension;ANSI;Escape;Codes;Nerd;Fonts;DECPS</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-    <Version>4.0.0</Version>
+    <Version>4.1.0</Version>
     <IsAotCompatible>True</IsAotCompatible>
     <OutputPath>..\..\bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
